# visionclaw-ollama

./: .gitattributes  .gitignore  DECISIONS.md  LICENSE-NOTES.md  README.md
bridge/: README.md  pyproject.toml
bridge/app/: config.py  main.py  ollama_llm.py  ollama_stt.py  protocol.py  tools.py
bridge/scripts/: smoke_test.py
client/: README.md
docs/: README.md
scripts/: dev-test-bridge.sh
